# tmuxgui

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  build-flatpak.sh  install-native.sh  org.gnome.TmuxGUI.yml  pyproject.toml  run.py  tmuxgui.sh  uninstall-native.sh
.github/workflows/: ci.yml
data/: com.github.gnome-tmux.desktop  io.github.vdirienzo.TmuxGUI.desktop  io.github.vdirienzo.TmuxGUI.metainfo.xml  io.github.vdirienzo.TmuxGUI.native.desktop  org.gnome.TmuxGUI.desktop  org.gnome.TmuxGUI.metainfo.xml
data/icons/hicolor/: icon-theme.cache  index.theme
scripts/: check_file_length.py
src/gnome_tmux/: __init__.py  logging_config.py  main.py  remote_hosts.py  themes.py  tmux_client.py  window.py
src/gnome_tmux/clients/: __init__.py  local.py  models.py  parsers.py  path_validator.py  remote.py
src/gnome_tmux/controllers/: __init__.py
src/gnome_tmux/dialogs/: __init__.py  help_dialog.py  remote_connect_dialogs.py  remote_dialogs.py  remote_host_dialogs.py  session_create_dialogs.py  session_dialogs.py  session_edit_dialogs.py
src/gnome_tmux/widgets/: __init__.py  file_tree.py  remote_session_row.py  session_row.py  terminal_view.py
src/gnome_tmux/widgets/file_tree/: __init__.py  core.py
src/gnome_tmux/widgets/file_tree/local/: __init__.py  file_row.py  loader.py  operations.py  search.py  search_row.py
src/gnome_tmux/widgets/file_tree/remote/: __init__.py  loader.py  operations.py  rows.py
src/gnome_tmux/widgets/file_tree/ui/: __init__.py  favorites.py
tests/: conftest.py  test_file_tree_logic.py  test_local_operations.py  test_models.py  test_parsers.py  test_path_validator.py  test_remote_tmux_client.py
