[project]
name = "tmuxgui"
version = "0.5.0"
description = "GNOME native frontend for tmux"
authors = [
    { name = "Homero Thompson del Lago del Terror" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

# Note: PyGObject, GTK4, Libadwaita and VTE must be installed via system packages:
# apt install python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1 gir1.2-vte-3.91

[project.scripts]
gnome-tmux = "gnome_tmux.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnome_tmux"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]  # Necesario para gi.require_version antes de imports

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build", "build-dir", ".venv"]

# Custom rule: max 300 lines per file (enforced by pre-commit + CI)
# See: scripts/check_file_length.py

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "detect-secrets>=1.5.0",
    "mypy>=1.19.1",
    "pre-commit>=3.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
